--- a/src/adhocracy_frontend/adhocracy_frontend/static/stylesheets/scss/components/_listing.scss
+++ b/src/adhocracy_frontend/adhocracy_frontend/static/stylesheets/scss/components/_listing.scss
@@ -46,6 +46,6 @@ a form for creating new elements. This form is then always visible.
 
 .listing-create-form {
     background-color: $color-structure-surface;
-    padding: 0.5em;
-    margin-bottom: 2em;
+    padding: 1em 1em 0.5em;
+    margin-bottom: 0.5em;
 }
